Feat/discussion box (#140)
* chore: update package.json

* feat: add graphql queries at typedef

* feat: add discussion-box

* refactor: add user saving to LoginPage

* refactor: modify RegisterPage

* refactor: modify ProfilePage

* refactor: modify global user object

* feat: add AvatarUploader component

* feat: setup dicussion box to site-text and ui tweaks

* fix: modify playwright test

* chore: update package.json

* fix: update with new user graphql query

* fix: pass playwright test

* chore: change docker-compose.yml

* chore: change workflow docker-compose.yml

* chore: change docker-compose.yml

* chore: change workflow

--- a/.github/docker/docker-compose.yml
+++ b/.github/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 networks:
   default:
     name: eil
@@ -12,8 +12,21 @@ services:
       POSTGRES_DB: eil
     ports:
       - 5432:5432
-    volumes:
-      - ./init-eil-database.sh:/docker-entrypoint-initdb.d/init-database.sh
+
+  cpg-server:
+    image: etenlab/cpg-server:latest
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USERNAME: postgres
+      DB_PASSWORD: example
+      DB_NAME: eil
+      MODE: DEV
+      PORT: 80
+    ports:
+      - 8201:80
+    depends_on:
+      - postgres
 
   postgres-sso:
     image: postgres:14.5
@@ -43,19 +56,3 @@ services:
       - start-dev
     depends_on:
       - postgres-sso
-
-  cpg-server:
-    image: etenlab/cpg-server:latest
-    environment:
-      DB_HOST: postgres
-      DB_PORT: 5432
-      DB_USERNAME: postgres
-      DB_PASSWORD: example
-      DB_NAME: eil
-      RUN_MIGRATIONS: "false"
-      MODE: DEV
-      PORT: 80
-    ports:
-      - 8201:80
-    depends_on:
-      - postgres
