feat: recover routeguard

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ REACT_APP_KEYCLOAK_CLIENT_SECRET=eXqrcJ2mHLwLaZCXoUlBFcUiYFdY6cCu
 #fatal 60 #Default
 
 REACT_APP_LOGTRACEALL=FALSE
+
+REACT_APP_MODE=local-dev
