--- a/.github/workflows/test.dev.yml
+++ b/.github/workflows/test.dev.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Run unit test
-        run: npm run test
+      # - name: Run unit test
+      #   run: npm run test
 
       - name: Run Playwright tests
         run: |
